spacing fix

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ a, a:visited, a:hover {
     .container {
         display: flex;
         flex-direction: column-reverse;
-        margin-top: 70px;
+        margin-top: 100px;
     }
     .container.first {
         order: 2;
@@ -110,6 +110,13 @@ a, a:visited, a:hover {
     font-size: 20px;
     margin-right: 25px;
     line-height: 1.8;
+}
+
+@media (orientation: portrait) {
+    .bio-text {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
 }
 
 /* .carousel__and__text {
